Fix alignment

--- a/public/css/light.scss
+++ b/public/css/light.scss
@@ -973,7 +973,7 @@ tr.table-warning:hover > td {
 		border-top: 1px solid $gray-300;
 	}
 
-	height: 94px;
+	height: 96px;
 }
 
 .score-box-left-wrapper {
